--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트</title>
+    <link rel="stylesheet" href="./styles/index.css">
     <script>
-        alert("안녕하세요.");
+        document.getElementById("idh1").innerHTML = "구민지";
     </script>
 </head>
-<body>
-    
 </body>
+    <h1 id="idh1"> 자바스크립트 </h1>
+<body>
 </html>
