--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트</title>
     <link rel="stylesheet" href="./styles/index.css">
-    <script>
-        document.getElementById("idh1").innerHTML = "구민지";
-    </script>
+    <script src="./scripts/index.js"></script>
 </head>
 </body>
-    <h1 id="idh1"> 자바스크립트 </h1>
-    <h1>구민지</h1>
+    <header>
+        <h1>제목</h1>
+    </header>
+    <main id="content">
+        본문
+    </main>
 <body>
 </html>
