--- a/solution1.html
+++ b/solution1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>주사위게임</title>
-    <link rel="stylesheet" href="./styles/solution.css">
-    <script src="./scripts/solution.js"></script>
+    <link rel="stylesheet" href="./styles/solution1.css">
+    <script src="./scripts/solution1.js"></script>
 </head>
 <body>
     <header>
