--- a/solution1.html
+++ b/solution1.html
@@ -30,7 +30,7 @@
             ox
         </section>
         <section id="s4">
-            <button id="bt1" onclick="showDice()">주사위선택</button>
+            <button id="bt1" onclick="showDice(); hide1(); show1(); show2();">주사위선택</button>
             <button id="bt2" onclick="showDice()">확인</button>
         </section>
     </main>
