--- a/01~02/solution1.html
+++ b/01~02/solution1.html
@@ -12,7 +12,7 @@
         <h1>주사위게임</h1>
     </header>
     <main id="content">
-        <section id="s1">이미지</section>
+        <section id="s1_1"><div id="s1">이미지</div></section>
         <section id="s2">
             <form name="form1" id="form1">
                 <fieldset>
@@ -26,12 +26,12 @@
                 </fieldset>
             </form>
         </section>
-        <section id="s3">
-            ox
+        <section id="s3_1">
+            <div id="s3">ox</div>
         </section>
         <section id="s4">
-            <button id="bt1" onclick="showDice(); hide1(); show1(); show2();">주사위선택</button>
-            <button id="bt2" onclick="showDice()">확인</button>
+            <button id="bt1" onclick="showDice()">주사위선택</button>
+            <button id="bt2" onclick="showOk()">확인</button>
         </section>
     </main>
 </body>
